--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ description: What do you need to programme in Python
 <head>
   <meta charset="UTF-8">
   <title>{{ page.title }}</title>
-  <!--<link href="./output.css" rel="stylesheet">-->
+  <link href="./output.css" rel="stylesheet">
   <meta name="description" content="{{ page.description }}">
   <!-- Other head elements here -->
 </head>
