--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@ description: What do you need to programme in Python
     <div class="form-example">
       <button name="button" type="submit" form="myform" class="bg-sky-400 hover:bg-sky-600 shadow-xl flex items-center">
         Submit
-        <span class="relative flex h-3 w-3 ml-1">
+        <span class="relative flex h-3 w-3">
           <span class="animate-ping absolute inline-flex h-full w-full rounded-full bg-orange-400 opacity-75"></span>
-          <span class="relative inline-flex rounded-full h-3 w-3 ml-1 bg-orange-500"></span>
+          <span class="relative inline-flex rounded-full h-3 w-3 bg-orange-500"></span>
         </span>
       </button>
     </div>
