--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ description: What do you need to programme in Python
     </div>
     <div class="form-example">
       <button name="button" type="submit" form="myform" class="bg-sky-400 hover:bg-sky-600 shadow-xl flex items-center">
-        Submit
+        <span class="inline-block mr-2">Submit</span>
         <span class="relative flex h-3 w-3">
           <span class="animate-ping absolute inline-flex h-full w-full rounded-full bg-orange-400 opacity-75"></span>
           <span class="relative inline-flex rounded-full h-3 w-3 bg-orange-500"></span>
